Add missing RuneLite HTTP API endpoints (item prices, external plugins, session ping)